<resources>
    <string name="app_name">ichords</string>

    <string name="txtFS_carTxt1">Quem canta seus males espanta!\nA nova função karaokê está  sendo implementada</string>
    <string name="txtFS_carTxt2">Aprecie novos gêneros musicais e a nova aba comunidade</string>
    <string name="txtFS_carTxt3">Desafie seus amigos! Novo sistema de rankeamento chegou para saber quem é o melhor da turma</string>

    <string name="txtSS_carTxt0">Experimente tocar</string>
    <string name="txtSS_carTxt1">Marisa Monte</string>
    <string name="txtSS_carTxt2">Chico Science</string>
    <string name="txtSS_carTxt3">Freddie Mercury</string>
    <string name="txtSS_carTxt4">Mitski</string>
    <string name="txtSS_carTxt5">Lana del Rey</string>
    <string name="txtSS_carTxt6">Afrodito</string>
    <string name="txtSS_carTxt7">Lia de Itamaracá</string>
    <string name="txtSS_carTxt99">Escolha seus artistas favoritos\ncom o novo sistema de recomendação</string>

    <string name="txtTS_Txt">E a maior atualização... nossas\nnovas trilhas de conhecimento!</string>
    <string name="txtBtnThirdScreen">Conheça agora</string>

    <string name="txtBtnCad">cadastre-se agora</string>
    <string name="txtBtnCad2">Já tenho uma conta</string>
    <string name="txtScrCad">Crie uma conta gratuita agora, ou  realize o seu login em uma conta já existente</string>

    <string name="menu_home">Home</string>
    <string name="menu_music">Trilha de desafios</string>
    <string name="menu_profile">Usuário</string>

    <string name="frag_home_title">Recomendados</string>
    <string name="frag_home_subtitle">para você</string>
    <string name="frag_home_title2">Confira o pódio</string>
    <string name="frag_home_subtitle2">conquiste o 1º lugar</string>

    <string name="frag_prof_usrNm">Rodrigo</string>
    <string name="frag_prof_usrLvl">Rockstar nível 4</string>
    <string name="frag_prof_title1">Evolução</string>
    <string name="frag_prof_title2">Amigos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="frag_leasson_txt0">Que acorde é esse?</string>
    <string name="frag_leasson_txt1">A Cidade</string>
    <string name="frag_leasson_txt2">Chico Science</string>
    <string name="frag_leasson_opc0">C</string>
    <string name="frag_leasson_opc1">D</string>
    <string name="frag_leasson_opc2">E</string>
    <string name="frag_leasson_opc3">F</string>

    <string name="frag_leasson2_txt0">Aprenda mais com nossas trilhas</string>
    <string name="frag_leasson2_txt1">A Cidade</string>
    <string name="frag_leasson2_txt2">Chico Science</string>
    <string name="frag_leasson2_opc0">Básico</string>
    <string name="frag_leasson2_opc1">Intermediário</string>
    <string name="frag_leasson2_opc2">Avançado</string>
    <string name="frag_leasson2_opc3">Me desafie!</string>

    <string name="frag_sett_txt0">Ajustes</string>
    <string name="frag_sett_usrNm">Rodrigo</string>
    <string name="frag_sett_usrMail">rodrigo@ichords.com</string>
    <string name="frag_sett_opc0">Segurança</string>
    <string name="frag_sett_opc1">Notificações</string>
    <string name="frag_sett_opc2">Idioma</string>
    <string name="frag_sett_opc3">Tempo gasto</string>
    <string name="frag_sett_opc4">Acessibilidade</string>

</resources>