<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LessonFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_leasson_txt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_leasson_txt0"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imgChord"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/img_chord"
        app:layout_constraintTop_toBottomOf="@id/frag_leasson_txt0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_leasson_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_leasson_txt1"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imgChord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_leasson_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_leasson_txt2"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/frag_leasson_txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/frag_leasson_opc0"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/btnColor"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif-medium"
        android:text="@string/frag_leasson_opc0"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:cornerRadius="8sp"
        app:layout_constraintTop_toBottomOf="@id/frag_leasson_txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/frag_leasson_opc1"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/btnColor"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif-medium"
        android:text="@string/frag_leasson_opc1"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:cornerRadius="8sp"
        app:layout_constraintTop_toBottomOf="@+id/frag_leasson_opc0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/frag_leasson_opc2"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/btnColor"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif-medium"
        android:text="@string/frag_leasson_opc2"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:cornerRadius="8sp"
        app:layout_constraintTop_toBottomOf="@+id/frag_leasson_opc1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/frag_leasson_opc3"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/btnColor"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif-medium"
        android:text="@string/frag_leasson_opc3"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:cornerRadius="8sp"
        app:layout_constraintTop_toBottomOf="@+id/frag_leasson_opc2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>