<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_home_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/inter_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/frag_home_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_home_subtitle"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/frag_home_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/frag_home_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/frag_home_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_home_title2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/inter_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewMusic"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/frag_home_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_home_subtitle2"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/frag_home_title2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/frag_home_subtitle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>