<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imgSett"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/baseline_settings_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_user_4"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_prof_usrNm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_prof_usrNm"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_prof_usrLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_prof_usrLvl"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/frag_prof_usrNm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/frag_prof_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_prof_title1"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/frag_prof_usrLvl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/frag_prof_title1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/frag_prof_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_prof_title2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/inter_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewProgress"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/frag_prof_title2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>