<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/frag_sett_txt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_sett_txt0"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/layoutUsr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/frag_sett_txt0"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_user_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:id="@+id/frag_sett_usrNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_sett_usrNm"
                android:fontFamily="@font/inter"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/frag_sett_usrMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_sett_usrMail"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:textSize="16sp"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgbArrowAccount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sett_opc_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/layoutUsr"
        android:gravity="start"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon__lock_locked"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/frag_sett_opc0"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/frag_prof_usrNm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sett_opc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sett_opc_0"
        android:gravity="start"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon__bell"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/frag_sett_opc1"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/frag_prof_usrNm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sett_opc_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sett_opc_1"
        android:gravity="start"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon__globe"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/frag_sett_opc2"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/frag_prof_usrNm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sett_opc_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sett_opc_2"
        android:gravity="start"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon__clock"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/frag_sett_opc0"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/frag_prof_usrNm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sett_opc_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sett_opc_3"
        android:gravity="start"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon__accessibility"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/frag_sett_opc4"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/frag_prof_usrNm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/baseline_keyboard_arrow_right_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>